# LLM-Rag

./: main.py  pyproject.toml
doc-qa-bot/app/: chunker.py  database.py  embeddings.py  main.py  rag.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/chat/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  Sidebar.tsx
frontend/src/store/: chatStore.ts
src/: FAQSearch.py  RagPipeline.py  Test.py  chunking.py  embeddings.py  huggingface.py  main.py  openrouter.py  prod.py  semanticSearch.py  storingEmbeddings.py  temp.py
