[project]
name = "llm-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "django>=6.0.2",
    "dotenv>=0.9.9",
    "groq>=1.0.0",
    "langchain-huggingface>=1.2.0",
    "openai>=2.21.0",
    "psycopg2>=2.9.11",
]
